# ABSURDTTY

./: Cargo.toml  README.md  justfile
assets/stamps/: asbsurdtty-stamp.txt  null-bureau-stamp.txt
crates/absurd-core/: Cargo.toml
crates/absurd-core/src/: format.rs  fs_safety.rs  lib.rs  seed.rs
crates/absurd-lexicon/: Cargo.toml
crates/absurd-lexicon/src/: lib.rs  moods.rs  tone.rs
crates/noise/: Cargo.toml
crates/noise/src/: cli.rs  main.rs  mood_reader.rs
crates/noise/src/commands/: doctor.rs  explain.rs  form.rs  ls.rs  mod.rs  patchnotes.rs  status.rs  uptime.rs
crates/tty-mood/: Cargo.toml
crates/tty-mood/src/: cli.rs  main.rs  mood.rs  report.rs
crates/tty-mood/src/history/: entry.rs  mod.rs  zsh.rs
crates/tty-mood/src/signals/: diversity.rs  errors.rs  frequency.rs  mod.rs  temporal.rs
docs/: CLI_SPEC.md  INCIDENT_LOG.md  MANIFESTO.md
