[package]
name = "absurd-core"
version = "0.1.0"
edition = "2021"
description = "Shared utilities for ABSURDTTY: seeds, formatting, safe file operations"

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
rand_chacha = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "5"
